# threads_tasks

./: CMakeLists.txt  README.md  comp_math_integral_task.cpp
